[tool.poetry]
name = "ncem"
version = "0.1.2"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "ncem. Learning cell communication from spatial graphs of cells."
authors = ["Anna C. Schaar <anna.schaar@helmholtz-muenchen.de>"]
license = "BSD"
readme = "README.rst"
homepage = "https://github.com/theislab/ncem"
repository = "https://github.com/theislab/ncem"
documentation = "https://ncem.readthedocs.io"
packages = [
    { include = "ncem" },
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]


[tool.poetry.dependencies]
python = ">=3.7,<3.9"
click = "^7.1.2"
rich = "^10.1.0"
PyYAML = "^5.4.1"
Jinja2 = ">=2.11.3,<4.0.0"
scanpy = "^1.7.2"
tensorflow = "^2.5.0"
squidpy = "^1.0.0"
patsy = "^0.5.1"
scipy = "^1.7.0"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
louvain = "^0.7.0"
diffxpy = "^0.7.4"
docrep = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.812"
typeguard = "^2.12.0"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx = "^3.5.4"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.11.1"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
darglint = "^1.5.8"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^3.3.0"
sphinx-rtd-theme = "^0.5.0"
sphinx-click = "^2.5.0"
Pygments = "^2.11.2"

[tool.poetry.scripts]
ncem = "ncem.__main__:main"

[tool.black]
line-length = 120

[tool.coverage.paths]
source = ["ncem", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["ncem"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
